--- a/WebApp/Views/Publicacion/OfertarSubasta.cshtml
+++ b/WebApp/Views/Publicacion/OfertarSubasta.cshtml
@@ -5,7 +5,45 @@
 <form method="post" action="" class="formularioLogin col-6 col-xl-4  row justify-content-center">
     <h2>Ofertar Subasta</h2>
     <label>@ViewBag.subasta.Nombre</label><br>
-
+    <table class="table table-striped ">
+        <theah>
+            <tr>
+                <th scope="col">Articulo</th>
+                <th scope="col">Precio</th>
+            </tr>
+        </theah>
+        @foreach (Articulo item in ViewBag.subasta.Articulos())
+        {
+            <tr scope="row">
+                <td>@item.Nombre</td>
+                @if (item is Venta)
+                {
+                    <td>VENTA</td>
+                }
+                else if (item is Subasta)
+                {
+                    <td>SUBASTA</td>
+                }
+                <td>@item.EstadoPublicacion</td>
+                <td>@item.ObtenerPrecio()</td>
+                @if (ViewBag.usuario is Administrador)
+                {
+                    <td><a class="btn-focus btn-lista" href="/publicacion/FinalizarSubasta/@item.Id">FINALIZAR</a></td>
+                }
+                else if (ViewBag.usuario is Cliente)
+                {
+                    if (item is Venta)
+                    {
+                        <td><a class="btn-focus btn-lista" href="/publicacion/ComprarVenta/@item.Id">COMPRAR</a></td>
+                    }
+                    else if (item is Subasta)
+                    {
+                        <td><a class="btn-focus btn-lista" href="/publicacion/OfertarSubasta/@item.Id">OFERTAR</a></td>
+                    }
+                }
+            </tr>
+        }
+    </table>
     
     <a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
     @if (!String.IsNullOrEmpty(ViewBag.msj))
