--- a/WebApp/Views/Publicacion/OfertarSubasta.cshtml
+++ b/WebApp/Views/Publicacion/OfertarSubasta.cshtml
@@ -4,7 +4,7 @@
 
 <form method="post" action="" class="formularioLogin col-6 col-xl-4  row justify-content-center">
     <h2>Ofertar Subasta</h2>
-    <label>@ViewBag.subasta.Nombre</label><br>
+    <h3 class="text-center">@ViewBag.subasta.Nombre</h3>
     <table class="table table-striped ">
         <theah>
             <tr>
@@ -16,10 +16,16 @@
         {
             <tr scope="row">
                 <td>@item.Nombre</td>
+                <td>$@item.Precio</td>
             </tr>
         }
     </table>
-    
+    <h4>PRECIO TOTAL $@ViewBag.subasta.ObtenerPrecio()</h4>
+    @foreach (Oferta item in ViewBag.subasta.MostrarOfertas())
+    {
+        <p>@item.Usuario.Nombre @item.Precio</p>
+    }
+
     <a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
     @if (!String.IsNullOrEmpty(ViewBag.msj))
     {
