--- a/WebApp/Views/Publicacion/OfertarSubasta.cshtml
+++ b/WebApp/Views/Publicacion/OfertarSubasta.cshtml
@@ -2,33 +2,50 @@
 
 
 
-<form method="post" action="" class="formularioLogin col-6 col-xl-4  row justify-content-center">
-    <h2>Ofertar Subasta</h2>
-    <h3 class="text-center">@ViewBag.subasta.Nombre</h3>
-    <table class="table table-striped ">
-        <theah>
-            <tr>
-                <th scope="col">Articulo</th>
-                <th scope="col">Precio</th>
-            </tr>
-        </theah>
-        @foreach (Articulo item in ViewBag.subasta.Articulos())
-        {
-            <tr scope="row">
-                <td>@item.Nombre</td>
-                <td>$@item.Precio</td>
-            </tr>
-        }
-    </table>
-    <h4>PRECIO TOTAL $@ViewBag.subasta.ObtenerPrecio()</h4>
-    @foreach (Oferta item in ViewBag.subasta.MostrarOfertas())
-    {
-        <p>@item.Usuario.Nombre @item.Precio</p>
-    }
-
-    <a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
-    @if (!String.IsNullOrEmpty(ViewBag.msj))
-    {
-        <p class="alert-info text-center">@ViewBag.msj</p>
-    }
+<form method="post" action="/publicacion/ValidarOfertaSubasta" class="formularioLogin col-6 col-xl-4  row justify-content-center">
+	<h2>Ofertar Subasta</h2>
+	<h3 class="text-center">@ViewBag.subasta.Nombre</h3>
+	<table class="table table-striped ">
+		<theah>
+			<tr>
+				<th scope="col">Articulo</th>
+				<th scope="col">Precio</th>
+			</tr>
+		</theah>
+		@foreach (Articulo item in ViewBag.subasta.Articulos())
+		{
+			<tr scope="row">
+				<td>@item.Nombre</td>
+				<td>$@item.Precio</td>
+			</tr>
+		}
+	</table>
+	@if (ViewBag.subasta.MostrarOfertas().Count > 0)
+	{
+		<h6>Lista de Ofertas</h6>
+		<table class="table table-striped ">
+			<theah>
+				<tr>
+					<th scope="col">Usuario</th>
+					<th scope="col">Oferta</th>
+				</tr>
+			</theah>
+			@foreach (Oferta item in ViewBag.subasta.MostrarOfertas())
+			{
+				<tr scope="row">
+					<td>@item.Usuario.Nombre</td>
+					<td>$@item.Precio</td>
+				</tr>
+			}
+		</table>
+	}
+	<h4 class="text-center">PRECIO TOTAL $@ViewBag.subasta.ObtenerPrecio()</h4>
+	<label class="col-5">Ingrese Oferta</label>
+	<input class="col-6 text-end" type="number" min="@ViewBag.subasta.ObtenerPrecio()" placeholder="Oferta mìn. $@ViewBag.subasta.ObtenerPrecio()" name="oferta">
+	<input type="submit" value="OFERTAR" class="col-5">
+	<a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
+	@if (!String.IsNullOrEmpty(ViewBag.msj))
+	{
+		<p class="alert-info text-center">@ViewBag.msj</p>
+	}
 </form>
