--- a/WebApp/Views/Publicacion/OfertarSubasta.cshtml
+++ b/WebApp/Views/Publicacion/OfertarSubasta.cshtml
@@ -42,7 +42,7 @@
 	<h4 class="text-center">PRECIO TOTAL $@ViewBag.subasta.ObtenerPrecio()</h4>
 	<label class="col-5">Ingrese Oferta</label>
 	<input class="col-6 text-end" type="number" min="@ViewBag.subasta.ObtenerPrecio()" placeholder="Oferta mìn. $@ViewBag.subasta.ObtenerPrecio()" name="oferta">
-	<input type="submit" value="OFERTAR" class="col-5">
+	<input type="submit" value="OFERTAR" class="col-5 btn-focus">
 	<a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
 	@if (!String.IsNullOrEmpty(ViewBag.msj))
 	{
