--- a/WebApp/Views/Publicacion/Publicaciones.cshtml
+++ b/WebApp/Views/Publicacion/Publicaciones.cshtml
@@ -49,9 +49,17 @@ else if (ViewBag.usuario is Administrador)//dashboard ADMINISTRADOR
             }
             <td>@item.EstadoPublicacion</td>
             <td>@item.ObtenerPrecio()</td>
-            @if (ViewBag.usuario is Administrador && item.EstadoPublicacion == Estado.ABIERTA)
-            {              
-                <td><a class="btn-focus btn-lista" href="/publicacion/FinalizarSubasta/@item.Id">FINALIZAR</a></td>
+            @if (ViewBag.usuario is Administrador )
+            {
+                if ( item.EstadoPublicacion == Estado.ABIERTA)
+                {
+                    <td><a class="btn-focus btn-lista" href="/publicacion/FinalizarSubasta/@item.Id">FINALIZAR</a></td>
+                }
+                else
+                {
+                    <td><a class="btn-focus btn-lista visually-hidden" href="/publicacion/FinalizarSubasta/@item.Id" >FINALIZAR</a></td>
+                }
+
             }
             else if (ViewBag.usuario is Cliente)
             {
