--- a/WebApp/Views/Publicacion/CompraPublicacion.cshtml
+++ b/WebApp/Views/Publicacion/CompraPublicacion.cshtml
@@ -1,12 +1,13 @@
 ﻿@using Dominio.Entidades
 
-<form method="post" action="/publicacion/ValidarOfertaSubasta/@ViewBag.subasta.Id" class="formularioLogin col-6 col-xl-4  row justify-content-evenly">
+<form method="post" class="formularioLogin col-6 col-xl-4  row justify-content-evenly">
 	@if (!String.IsNullOrEmpty(ViewBag.msj))
 	{
 		<p class="alert-info text-center">@ViewBag.msj</p>
 	}
 	<h2>COMPRA de Publicación</h2>
-	<h3 class="text-center">@ViewBag.subasta.Nombre</h3>
+	<h3 class="text-center">@ViewBag.venta.Nombre</h3>
+	<input class="visually-hidden" type="number" name="Id" value="@ViewBag.venta.Id" />
 	<table class="table table-striped ">
 		<theah>
 			<tr>
@@ -22,29 +23,8 @@
 			</tr>
 		}
 	</table>
-	@if (ViewBag.subasta.MostrarOfertas().Count > 0)
-	{
-		<h6 class="text-center">Lista de Ofertas</h6>
-		<table class="table table-striped ">
-			<theah>
-				<tr>
-					<th scope="col">Usuario</th>
-					<th scope="col">Oferta</th>
-				</tr>
-			</theah>
-			@foreach (Oferta item in ViewBag.subasta.MostrarOfertas())
-			{
-				<tr scope="row">
-					<td>@item.Usuario.Nombre</td>
-					<td>$@item.Precio</td>
-				</tr>
-			}
-		</table>
-	}
-	<h2 class="text-center h4">Precio Total $@ViewBag.subasta.ObtenerPrecio()</h2>
-	<label class="col-5">Ingrese Oferta</label>
-	<input class="col-6 text-end" type="number" placeholder="Oferta mìn. $@ViewBag.subasta.ObtenerPrecio()" name="oferta" id="inputOferta">
-
-	<input type="submit" value="OFERTAR" class="col-5 btn-focus">
+	<h2 class="text-center h4">Precio Total $@ViewBag.venta.ObtenerPrecio()</h2>
+	
+	<input type="submit" value="COMPRAR" class="col-5 btn-focus">
 	<a class="btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
 </form>
