--- a/WebApp/Views/Usuario/AgregarSaldo.cshtml
+++ b/WebApp/Views/Usuario/AgregarSaldo.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Dominio.Entidades
 
 
-<form method="post"  class="formularioLogin col-6 col-xl-4  row justify-content-center"> @* action="/Usuario/CargarSaldo" *@
+<form method="post" action="/Usuario/CargarSaldo" class="formularioLogin col-6 col-xl-4  row justify-content-center">
     <h2>Cargar Saldo</h2>
     <label>@ViewBag.usuario.Nombre @ViewBag.usuario.Apellido</label><br>
     <label>Saldo : $@ViewBag.usuario.SaldoBilletera</label><br>
