--- a/WebApp/Views/Usuario/AgregarSaldo.cshtml
+++ b/WebApp/Views/Usuario/AgregarSaldo.cshtml
@@ -9,8 +9,29 @@
     <input type="number" required name="Monto" value="0">
     <input type="submit" class="my-2 btn-focus col-5" value="CARGAR">
     <a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
-    @if (!String.IsNullOrEmpty(ViewBag.msj))
-    {
-        <p class="alert-info text-center">@ViewBag.msj</p>
-    }
 </form>
+
+@if (ViewBag.msj != null && ViewBag.msj.ToString() != "")
+{
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div class="toast bg-success text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+            <div class="toast-header bg-success text-white">
+                <strong class="me-auto">FOCUS</strong>
+                <small>Web Store</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body bg-white text-dark">
+                @ViewBag.msj
+            </div>
+        </div>
+    </div>
+}
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var toastEl = document.getElementById('myToast');
+        if (toastEl) {
+            var toast = new bootstrap.Toast(toastEl);
+            toast.show();
+        }
+    });
+</script>
