ajuste de estilo del toast

--- a/WebApp/Views/Usuario/AgregarSaldo.cshtml
+++ b/WebApp/Views/Usuario/AgregarSaldo.cshtml
@@ -14,8 +14,8 @@
 @if (ViewBag.msj != null && ViewBag.msj.ToString() != "")
 {
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div class="toast bg-success text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
-            <div class="toast-header bg-success text-white">
+        <div class="toast bg-focus text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+            <div class="toast-header text-white bg-focus">
                 <strong class="me-auto">FOCUS</strong>
                 <small>Web Store</small>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
