--- a/WebApp/Views/Publicacion/FinalizarSubasta.cshtml
+++ b/WebApp/Views/Publicacion/FinalizarSubasta.cshtml
@@ -7,8 +7,23 @@
     <label>Desea finalizar publicacion??</label><br>   
     <input type="submit" class="my-2 btn-focus col-5" value="CONFIRMAR">
     <a class="my-2 btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a> 
-    @if (!String.IsNullOrEmpty(ViewBag.msj))
+    @* @if (!String.IsNullOrEmpty(ViewBag.msj))
     {
         <p class="alert-info text-center">@ViewBag.msj</p>
-    }
+    } *@
 </form>
+@if (ViewBag.msj != null && ViewBag.msj.ToString() != "")
+{
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div class="toast bg-focus text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+            <div class="toast-header text-white bg-focus">
+                <strong class="me-auto">FOCUS</strong>
+                <small>Web Store</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body bg-white text-dark">
+                @ViewBag.msj
+            </div>
+        </div>
+    </div>
+}
