--- a/WebApp/Views/Publicacion/OfertarSubasta.cshtml
+++ b/WebApp/Views/Publicacion/OfertarSubasta.cshtml
@@ -3,10 +3,10 @@
 
 
 <form method="post" action="/publicacion/ValidarOfertaSubasta/@ViewBag.subasta.Id" class="formularioLogin col-6 col-xl-4  row justify-content-evenly">
-	@if (!String.IsNullOrEmpty(ViewBag.msj))
+	@* @if (!String.IsNullOrEmpty(ViewBag.msj))
 	{
 		<p class="alert-info text-center">@ViewBag.msj</p>
-	}
+	} *@
 	<h2>Ofertar Subasta</h2>
 	<h3 class="text-center">@ViewBag.subasta.Nombre</h3>
 	<table class="table table-striped ">
@@ -50,3 +50,18 @@
 	<input type="submit" value="OFERTAR" class="col-5 btn-focus">
 	<a class="btn-focus col-5" asp-area="" asp-controller="Publicacion" asp-action="Index" id="salir">Volver</a>
 </form>
+@if (ViewBag.msj != null && ViewBag.msj.ToString() != "")
+{
+	<div class="toast-container position-fixed bottom-0 end-0 p-3">
+		<div class="toast bg-focus text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+			<div class="toast-header text-white bg-focus">
+				<strong class="me-auto">FOCUS</strong>
+				<small>Web Store</small>
+				<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+			</div>
+			<div class="toast-body bg-white text-dark">
+				@ViewBag.msj
+			</div>
+		</div>
+	</div>
+}
