--- a/WebApp/Views/Publicacion/Publicaciones.cshtml
+++ b/WebApp/Views/Publicacion/Publicaciones.cshtml
@@ -21,10 +21,10 @@ else if (ViewBag.usuario is Administrador)//dashboard ADMINISTRADOR
         crearNodo(nav, "a", ["innerHTML", "SALIR", "class", "btn-focus col-md-2", "href", "/Usuario/Logout"]);
     </script>
 }
-@if (!String.IsNullOrEmpty(ViewBag.msj))
+@* @if (!String.IsNullOrEmpty(ViewBag.msj))
 {
     <p class="alert alert-success text-center">@ViewBag.msj</p>
-}
+} *@
 <table class="table table-striped ">
     <theah>
         <tr>
@@ -81,4 +81,18 @@ else if (ViewBag.usuario is Administrador)//dashboard ADMINISTRADOR
         </tr>
     }
 </table>
-
+@if (ViewBag.msj != null && ViewBag.msj.ToString() != "")
+{
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div class="toast bg-focus text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+            <div class="toast-header text-white bg-focus">
+                <strong class="me-auto">FOCUS</strong>
+                <small>Web Store</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body bg-white text-dark">
+                @ViewBag.msj
+            </div>
+        </div>
+    </div>
+}
