--- a/WebApp/Views/Publicacion/CompraPublicacion.cshtml
+++ b/WebApp/Views/Publicacion/CompraPublicacion.cshtml
@@ -28,8 +28,8 @@
 @if (ViewBag.msj != null && ViewBag.msj.ToString() != "")
 {
 	<div class="toast-container position-fixed bottom-0 end-0 p-3">
-		<div class="toast bg-focus text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
-			<div class="toast-header text-white bg-focus">
+		<div class="toast  text-white" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+			<div class="toast-header text-white bg-danger">
 				<strong class="me-auto">FOCUS</strong>
 				<small>Web Store</small>
 				<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
